@@ -1,3 +1,7 @@
+2001-06-01  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* dbfopen.c: ensure binary mode open.
+
 2001-05-31  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* shpopen.c: Add support for writing null shapes.
